k8s/base/ingress.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx
#spec:
#  selector:
#    app: nginx
#  ports:
#    - port: 8080
#  type: NodePort
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:

    #    - http:
    #        paths:
    #          - path: /profile
    #            pathType: Prefix
    #            #            pathType: ImplementationSpecific
    #            backend:
    #              service:
    #                name: profile-client-service
    #                port:
    #                  number: 80
    #      host: acmo.io
    - http:
        paths:
          - path: /api/profile
            #            pathType: ImplementationSpecific
            pathType: Exact
            backend:
              service:
                name: profile-api-service
                port:
                  number: 3333
      host: acmo.io
    - http:
        paths:
          - path: /argoccd
            pathType: Exact
            #            pathType: Prefix
            #            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 8080
          - path: /api/test
            pathType: Exact
            #            pathType: Prefix
            #            pathType: ImplementationSpecific
            backend:
              service:
                name: be-test-app-service
                port:
                  number: 3333
      host: acmo.io
    - http:
        paths:
          - path: /
            #            pathType: ImplementationSpecific
            pathType: Exact
            backend:
              service:
                name: users-client-service
                port:
                  number: 80
      host: acmo.io
    - http:
        paths:
          - path: /api/users
            #            pathType: ImplementationSpecific
            #            pathType: Prefix
            pathType: Exact
            backend:
              service:
                name: users-api-service
                port:
                  number: 3333
      host: acmo.io
#      host: dev.devops-toolkit.192.168.49.2.nip.io
